# aira

./: .gitmodules  .travis.yml  LICENSE  Makefile  README.md  expenses.md  mkdocs.yml
AiraEthBot/: AiraEthBot.cabal  aira-ethereum-bot.cabal  stack.yaml
AiraEthBot/app/: Constants.hs  Database.hs  Main.hs  Story.hs
AiraEthBot/contracts/builder/: BuilderAiraWallet.sol
AiraEthBot/contracts/creator/: CreatorOwnedRegistrar.sol
AiraSecureBot/: AiraSecureBot.cabal  stack.yaml
AiraSecureBot/app/: Main.hs
AiraWalletBot/: AiraWalletBot.cabal
AiraWalletBot/app/: Main.hs
AiraWalletBot/contracts/: AiraWallet.sol  OwnedRegistrar.sol  Registrar.sol
AiraWalletBot/contracts/builder/: BuilderAiraWallet.sol  BuilderOwnedRegistrar.sol
AiraWalletBot/contracts/creator/: CreatorAiraWallet.sol
aira-bot-platform/: aira-bot-platform.cabal  stack.yaml
aira-bot-platform/abi/: aef.json  builder_deal.json  builder_proxy.json  builder_token.json  builder_token_emission.json  builder_token_ether.json  invoice.json  proxy.json  registrar.json  token.json  token_selling.json
aira-bot-platform/src/Aira/: Account.hs  Config.hs  Registrar.hs  TextFormat.hs
aira-bot-platform/src/Aira/Bot/: Activation.hs  Common.hs  Contract.hs  Factory.hs  Fee.hs  Invoice.hs  Proxy.hs  Secure.hs  Story.hs  Token.hs  Watch.hs
aira-bot-platform/src/Aira/Bot/Ethereum/: Contract.hs  Story.hs
aira-bot-platform/src/Aira/Bot/Factory/: Contract.hs  Story.hs
aira-bot-platform/src/Aira/Bot/Security/: Story.hs  Watch.hs
aira-bot-platform/src/Aira/Contract/: AiraEtherFunds.hs  BuilderDeal.hs  BuilderInvoice.hs  BuilderProxy.hs  BuilderToken.hs  BuilderTokenEmission.hs  BuilderTokenEther.hs  Deal.hs  Factory.hs  Invoice.hs  Proxy.hs  Token.hs  TokenSelling.hs
aira-ethereum-bot/: stack.yaml
aira-ethereum-bot/app/: ActivationCode.hs  Constants.hs  Database.hs  Main.hs  Story.hs
contracts/: AiraEstimator.sol  AiraEtherFunds.sol  AiraMarket.sol  AiraRegistrarService.sol  Comission.sol  Deal.sol  Invoice.sol  Proxy.sol
contracts/builder/: Builder2.sol  Builder2Token.sol  Builder2TokenEmission.sol  BuilderAiraEtherFunds.sol  BuilderComission.sol  BuilderDeal.sol  BuilderInvoice.sol  BuilderOwnedRegistrar.sol
contracts/creator/: CreatorAiraEtherFunds.sol  CreatorComission.sol  CreatorDeal.sol  CreatorInvoice.sol  CreatorOwnedRegistrar.sol
dapp/: .eslintrc  .gitignore  Makefile  mist-webpack.config.js  package.json  parity-webpack.config.js  server.js  webpack.config.js
dapp/public/: index.html
dapp/src/: index.js
dapp/src/config/: config.js  reducers.js  routes.js  store.js
dapp/src/modules/: reducers.js
dapp/src/modules/app/: actionTypes.js  actions.js  reducer.js
dapp/src/routes/start/: index.js
dapp/src/routes/start/components/start/: approve.js  identify.js  index.js  main.js  send.js
dapp/src/routes/start/containers/: formApprove.js  formIdentify.js  formSend.js  start.js
dapp/src/shared/components/app/: auto.js  footer.js  form.js  header.js  notFound.js  notification.js  requiredMist.js  style.css
dapp/src/shared/containers/: app.js  style.css
dapp/src/utils/: abi.js  address.js  blockchain.js  contract.js  helper.js  web3.js
docker/aira/: Dockerfile
docker/eth_bot/: Dockerfile  docker-entrypoint.sh
docker/parity_cloud/: Dockerfile  docker-entrypoint.sh
docker/parity_headless/: Dockerfile
docker/secure_bot/: Dockerfile  docker-entrypoint.sh
docs/: aira_by_examples.md  aira_in_depth.md  basic_usage.md  basic_usage.rst  cheats.md  conf.py  connecting_via_ssh.rst  contributing.rst  faq.rst  getting_started.rst  index.md  index.rst  liability-market.md  quick-start.md  raspberry-pi-setup.md
docs/aira_in_depth/: A_Wink_from_Arduino.md  A_Wink_from_Arduino.rst  Arduino_multiple_choice.rst  Connecting_via_SSH.md  Connecting_via_SSH.rst  Lighthouse_scenario.rst  Message_spec.rst  Robonomics_Contracts_Deployment.md  Robonomics_Contracts_Deployment.rst  Robonomics_How_It_Works.rst  lesson0.md
docs/api/: ethereum_common.rst  ethereum_common_msg.rst  ethereum_common_msgs.rst  robonomics_liability.rst  robonomics_liability_msgs.rst
docs/css/: extra_css.css
docs/examples/: connect_sensor.rst  connect_simple_cps.rst  passing_dynamic_parameters.rst
docs/robonomics-js/: beginning.rst  creating_dapp.rst  howto.rst
docs/robonomics_network/: become_a_provider.rst  contracts_deployment.rst  how_it_works.rst
docs/specs/: market_messages.rst  message_spec.rst
es_verify/: AiraEtherFunds.sol  AiraRegistrarService.sol
tool/: install.osx.parallels.sh  install.osx.virtualbox.sh  install.osx.xhyve.sh  start.sh
