name:                aira-ethereum-bot
version:             0.1.0.0
synopsis:            Aira Ethereum helper bot 
description:         Please see README.md
homepage:            https://github.com/airalab/aira#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable aira-ethereum-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && <5
                     , data-default-class
                     , lens-family-th
                     , telegram-bot
                     , telegram-api
                     , lens-family
                     , acid-state
                     , containers
                     , safecopy
                     , random
                     , time 
                     , web3
                     , text
                     , mtl
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/airalab/aira
