name:                AiraWalletBot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/airalab/AiraWalletBot#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable AiraWalletBot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base  >= 4.7 && <5
                     , data-default-class
                     , telegram-bot
                     , acid-state
                     , containers
                     , safecopy
                     , web3
                     , text
                     , mtl
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/airalab/AiraWalletBot
