name:                aira-bot-platform
version:             0.4.0.0
synopsis:            Aira helper bot platform 
description:         Please see README.md
homepage:            https://github.com/airalab/aira#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Aira
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aira.Account
                     , Aira.Registrar
                     , Aira.Bot.Watch
                     , Aira.Bot.Token
                     , Aira.Bot.Common
                     , Aira.Bot.Secure
                     , Aira.Bot.Factory
                     , Aira.Bot.Activation
                     , Aira.Contract.Token
                     , Aira.Contract.Factory
                     , Aira.Contract.AiraEtherFunds
  build-depends:       base  >= 4.7 && <5
                     , data-default-class
                     , lens-family-th
                     , telegram-bot
                     , telegram-api
                     , lens-family
                     , acid-state
                     , containers
                     , cryptonite
                     , hexstring
                     , safecopy
                     , random
                     , time 
                     , web3
                     , text
                     , mtl
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/airalab/aira
