name:                aira-bot-platform
version:             0.5.0.0
synopsis:            Aira helper bot platform 
description:         This is a library for autonomous agent creation
homepage:            https://github.com/airalab/aira#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           Alexander Krupenkin
category:            Aira
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Aira.Account
                     , Aira.Registrar
                     , Aira.Bot.Watch
                     , Aira.Bot.Token
                     , Aira.Bot.Common
                     , Aira.Bot.Secure
                     , Aira.Bot.Factory
                     , Aira.Bot.Invoice
                     , Aira.Bot.Activation
  other-modules:       Aira.Contract.Token
                     , Aira.Contract.Invoice
                     , Aira.Contract.BuilderToken
                     , Aira.Contract.BuilderInvoice
                     , Aira.Contract.AiraEtherFunds
                     , Aira.Contract.BuilderTokenEther
                     , Aira.Contract.BuilderTokenEmission
  build-depends:       base >4.8 && <4.10
                     , data-default-class
                     , base16-bytestring
                     , lens-family-th
                     , telegram-bot
                     , telegram-api
                     , lens-family
                     , acid-state
                     , containers
                     , cryptonite
                     , safecopy
                     , memory
                     , random
                     , pipes
                     , time 
                     , web3
                     , text
                     , mtl
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  --ghc-options:         -ddump-splices

source-repository head
  type:     git
  location: https://github.com/airalab/aira
